fix: fix data page items spacing

--- a/packages/react-app/src/pages/data/data.module.css
+++ b/packages/react-app/src/pages/data/data.module.css
@@ -41,4 +41,18 @@
   justify-content: start;
   flex-wrap: wrap;
   gap: 12px;
+
+  h2 + & {
+    margin-top: 12px;
+  }
+}
+
+.example {
+  border-bottom: 1px solid var(--border-color);
+  padding-bottom: 16px;
+}
+
+.text_input {
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
